<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WAM Bridge</string>
    <string name="widget_renderer_toggle">Toggle DLNA renderer</string>
    <string name="widget_open_radio">Open radio stations</string>
    <string name="widget_play_pause">Play or pause radio</string>
    <string name="widget_mute">Mute or unmute speaker</string>
    <string name="widget_volume_down">Volume down</string>
    <string name="widget_volume_up">Volume up</string>
    <string name="widget_stop_radio">Stop radio</string>
</resources>
